[package]
name = "irony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.2"
bumpalo = "3.13.0"
rustc-hash = "1.1.0"
indexmap = "2.0.0"
hashlink = "0.8.3"
dashmap = "5.5.0"

irony_macros = { path = "../irony_macros"}
